--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ Flask-WTF==0.15.1
 gevent==21.8.0
 gevent-websocket==0.10.1
 greenlet==1.1.2
-gunicorn==20.1.0
+gunicorn===19.9.0
 itsdangerous==2.0.1
 Jinja2>=2.10.1
 MarkupSafe==2.0.1
