--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 Click==7.0
 Flask==2.0.2
 Flask-Login==0.5.0
-flask_socketio==4.3.2
+Flask-SocketIO==4.3.2
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==0.15.1
 gevent==21.8.0
@@ -13,8 +13,8 @@ Jinja2>=2.10.1
 MarkupSafe==2.0.1
 passlib==1.7.4
 psycopg2==2.9.1
-python-engineio==4.2.1
-python-socketio==5.4.0
+python-engineio==3.14.2
+python-socketio==4.3.2
 six==1.16.0
 SQLAlchemy==1.4.25
 Werkzeug==2.0.2
